--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   postgres:
@@ -14,6 +14,8 @@ services:
       retries: 5
     networks:
       - app-network
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
 
   pgadmin:
     image: dpage/pgadmin4
@@ -43,7 +45,7 @@ services:
   nginx:
     image: nginx:latest
     ports:
-      - "80:80"
+      - "8080:80" # Map port 8080 on the host to port 80 in NGINX
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
@@ -51,9 +53,25 @@ services:
     networks:
       - app-network
 
+  minio: # Added MinIO service
+    image: minio/minio
+    container_name: minio
+    ports:
+      - "9000:9000" # MinIO API port
+      - "9001:9001" # MinIO web interface port
+    environment:
+      MINIO_ROOT_USER: admin         # Root username
+      MINIO_ROOT_PASSWORD: password  # Root password
+    volumes:
+      - minio-data:/data             # Persistent data storage
+    command: server --console-address ":9001" /data
+    networks:
+      - app-network
+
 volumes:
   postgres-data:
   pgadmin-data:
+  minio-data: # Added volume for MinIO persistent data
 
 networks:
   app-network:
