--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,47 +5,41 @@ services:
       POSTGRES_DB: myappdb
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U user -d myappdb"]
-      interval: 5s
-      retries: 5
-      timeout: 3s
     networks:
-      - app-network
+      app-network: {}
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
   fastapi:
     build: .
     environment:
-      # Updated DATABASE_URL to use the asyncpg driver
       DATABASE_URL: postgresql+asyncpg://user:password@postgres:5432/myappdb
-    volumes:
-      - ./:/myapp/
     depends_on:
       postgres:
         condition: service_healthy
     networks:
-      - app-network
+      app-network: {}
+    entrypoint: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
 
   pgadmin:
     image: dpage/pgadmin4
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@example.com
       PGADMIN_DEFAULT_PASSWORD: adminpassword
-      PGADMIN_LISTEN_PORT: 80
-    ports:
-      - "5050:80"
     depends_on:
       - postgres
+    ports:
+      - "5050:80"
     networks:
-      - app-network
+      app-network: {}
     volumes:
       - pgadmin-data:/var/lib/pgadmin
 
 networks:
   app-network:
+    driver: bridge
 
 volumes:
   postgres-data:
   pgadmin-data:
+
