--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,11 @@ services:
       POSTGRES_DB: myappdb
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
+    healthcheck:  # Added healthcheck to ensure PostgreSQL is ready
+      test: ["CMD-SHELL", "pg_isready -U user -d myappdb"]
+      interval: 5s
+      retries: 5
+      timeout: 3s
     networks:
       app-network: {}
     volumes:
@@ -16,7 +21,7 @@ services:
       DATABASE_URL: postgresql+asyncpg://user:password@postgres:5432/myappdb
     depends_on:
       postgres:
-        condition: service_healthy
+        condition: service_healthy  # Ensures FastAPI starts only after PostgreSQL is healthy
     networks:
       app-network: {}
     entrypoint: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
