--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
       POSTGRES_DB: myappdb
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
-    healthcheck:  # Added healthcheck to ensure PostgreSQL is ready
+    healthcheck:  # Add a health check to ensure PostgreSQL is ready
       test: ["CMD-SHELL", "pg_isready -U user -d myappdb"]
       interval: 5s
       retries: 5
       timeout: 3s
     networks:
-      app-network: {}
+      - app-network
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
@@ -21,10 +21,10 @@ services:
       DATABASE_URL: postgresql+asyncpg://user:password@postgres:5432/myappdb
     depends_on:
       postgres:
-        condition: service_healthy  # Ensures FastAPI starts only after PostgreSQL is healthy
+        condition: service_healthy  # Wait for PostgreSQL to be healthy
     networks:
-      app-network: {}
-    entrypoint: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+      - app-network
+    entrypoint: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
   pgadmin:
     image: dpage/pgadmin4
@@ -36,7 +36,7 @@ services:
     ports:
       - "5050:80"
     networks:
-      app-network: {}
+      - app-network
     volumes:
       - pgadmin-data:/var/lib/pgadmin
 
@@ -47,4 +47,3 @@ networks:
 volumes:
   postgres-data:
   pgadmin-data:
-
